--- a/Public/index.html
+++ b/Public/index.html
@@ -12,7 +12,7 @@
     <header role="banner" id="top">
 
         <h1>Health blog</h1>
-        <aside role="Sign Up" id="signUp"><a href="forms.html" target="_blank">Sign up</a></aside> 
+        <aside role="Sign Up" id="signUp"><a href="../views/form.ejs" target="_blank">Sign up</a></aside> 
     </header>
     <main role="main">
         <div id="NavigationPane" roel="navigation">
